# tokenteller

./: README.md  pyproject.toml  requirements-ta.txt  setup_ta.ps1
docs/: creating_drivers.md
examples/: basic_experiment.py  compare_hf_tokenizers_on_random_wikipedia_article.py  compare_hf_tokenizers_on_random_wikipedia_article_summary.md  compare_hf_tokenizers_on_wikipedia.py  compare_hf_tokenizers_on_wikipedia_sentance.py  example_utils.py  n_random_common_crawl.py  n_random_opensub.py  n_random_wikipedia.py  visualize_tokenizer_comparison.py
examples/results/: 100_wikipedia_avg.md  combined_tokenizer_dataset_summary.csv  combined_tokenizer_winner_rates.csv  common_crawl_tokenizer_comparison_record_level_results.csv  common_crawl_tokenizer_comparison_report.md  opensubtitles_tokenizer_comparison_record_level_results.csv  opensubtitles_tokenizer_comparison_report.md  wikipedia_tokenizer_comparison_record_level_results.csv  wikipedia_tokenizer_comparison_report.md
src/tokenteller/: __init__.py
src/tokenteller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  fakes.py  test_core_contracts.py  test_metrics_and_runner.py
tests/__pycache__/: __init__.cpython-314.pyc.2244316054032  conftest.cpython-314.pyc.2244316054032  fakes.cpython-314.pyc.2244326482656  test_core_contracts.cpython-314.pyc.2244316054032  test_metrics_and_runner.cpython-314.pyc.2244326057536
tests/_generated/: common_crawl_test.jsonl
tokenteller/: README.md  pyproject.toml
tokenteller/docs/: creating_drivers.md
tokenteller/examples/: basic_experiment.py
tokenteller/tests/: __init__.py  conftest.py  fakes.py  test_core_contracts.py  test_metrics_and_runner.py  test_models_bpe.py
(+90 files in other folders)
