[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenteller"
version = "0.1.0"
description = "Modular tokenizer analysis toolkit for comparing tokenizers across datasets."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tokenteller Team" }
]
dependencies = [
  "datasets>=2.0",
  "transformers>=4.0",
]

[project.optional-dependencies]
commoncrawl = [
  "cdx-toolkit>=0.9.38",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
